# gif3004-lab5

./: readme.md
pc/: CMakeLists.txt  tp5serveur.c
rpi/: CMakeLists.txt  setr_driver_polling.ko  syncAndStartGDB.sh  tp5client.c
